2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Changed to update member menu explicitly.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Changed to show conditions of DCC file sending items accurately.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Added multi line paste sheet.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Changed not to show DCC window as key window when received DCC file transfer request.
	Changed to stop highlighting for user's own messages.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Added input history.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Improved paste behaviors.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to render white spaces as &nbsp;.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to force single line on the inputting edit.
	Fixed a bug, cannot use paste menu on log views.

2007-06-21  Satoshi Nakagawa <artension@gmail.com>

	Added dislike words.
	Supported character attributes of mIRC.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed whois dialogs and DCC file transfer items to follow nick changes.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to print DCC file transfer messages.
	Changed to disable DCC file sending when my address is nil.
	Refactoring.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to use keyword settings.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to use DCC port range.
	Implemented address detection.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Added ib_mapped_int_outlet.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Supported loading float values in user defaults.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Added preferences dialog.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Refactoring.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Added facility of preference auto loading and saving.
