@@ -3,6 +3,20 @@
 
 class ListView < OSX::NSTableView
   include OSX
+  attr_accessor :key_delegate
+  
+  def keyDown(e)
+    if @key_delegate
+      case e.keyCode
+      when 123..126 # cursor keys
+      when 116,121  # page up/down
+      else
+        @key_delegate.listView_keyDown(e)
+        return
+      end
+    end
+    super_keyDown(e)
+  end
 
   def selectedRows
     ary = []
